# displayio-pixels

./: .gitignore  Cargo.toml  README.md  requirements.txt
displayio_pixels/: __init__.py
examples/: code-desktop.py  gui.py
shaders/: noise.wgsl
src/: lib.rs  renderer.rs
