[package]
name = "displayio-pixels"
version = "0.0.1"
authors = ["Carsten Thue-Bludworth <carstentb@protonmail.com>"]
edition = "2021"

[lib]
name = "displayio_pixels"
crate-type = ["cdylib"]

[dependencies]
pyo3              = { version = "0.18.1", features = ["extension-module"] }
fltk              = { version = "1.4.1", features = ["rwh05"] }
pixels            = "0.11.0"
wgpu              = "0.15.1"
embedded-graphics = "0.7.1"
